# little-kb

./: .gitignore  BUILD_GUIDE.md  ELECTRON_README.md  PORT_CONFIGURATION.md  README.md  REDDIT_POST.md  backend.spec  build.sh  config.json  manage_services.sh  package.json  restart.sh
backend/: main.py  pyproject.toml  run_backend.py  temp_mcp_server_a50e98a9-71ca-451a-9bb0-493da1caff15.py
backend/app/: main.py
backend/app/models/: schemas.py
backend/app/routers/: files.py  knowledge_bases.py  mcp.py  search.py
backend/app/services/: file_processor.py  knowledge_base_service.py  mcp_service.py  vector_service.py
backend/app/utils/: port_utils.py
electron/: main.js  preload.js
frontend/: package-lock.json  package.json  run_frontend.sh
frontend/public/: index.html
frontend/src/: App.tsx  electron.d.ts
frontend/src/components/: DocumentsList.tsx  FileUpload.tsx  KnowledgeBaseDetail.tsx  LoadingScreen.tsx  MCPServerManager.tsx  SearchInterface.tsx
frontend/src/services/: api.ts
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
