[project]
name = "vectorvault-backend"
version = "0.1.0"
description = "VectorVault - Vector Storage & MCP Management Platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.1.0",
    "fastapi>=0.117.1",
    "pillow>=11.3.0",
    "pypdf2>=3.0.1",
    "pytesseract>=0.3.13",
    "python-docx>=1.2.0",
    "python-multipart>=0.0.20",
    "sentence-transformers>=5.1.1",
    "uvicorn>=0.36.0",
    "mcp>=1.0.0",
    "starlette>=0.41.0",
    "anyio>=4.0.0",
    "click>=8.0.0",
    "ebooklib>=0.18",
    "beautifulsoup4>=4.12.0",
    "rank-bm25>=0.2.2",
]
